# solanaceae_message_serializer

./: CMakeLists.txt
src/: CMakeLists.txt
src/solanaceae/message3/: message_serializer.cpp  message_serializer.hpp
src/solanaceae/message3/nj/: message_components.hpp  message_components_serializer.cpp  message_components_serializer.hpp
